--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,3 +31,12 @@
     transform: rotate(360deg);
   }
 }
+
+.notes-header {
+  background-color: #FFC133;
+  border-bottom: 3px solid #CCD1D1;
+}
+
+.header-title {
+  margin-top: 0px;
+}
