--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,6 +43,25 @@
 
 .single-note {
   border: 2px solid orangered;
-  width: 200px;
+  width: 22.4%;
+  margin: 10px;
+  max-height: 225px;
+  overflow: hidden;
+}
+
+.note-title {
+  font-weight: bold;
+}
+
+.notes-grid {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  /* height: 500px; */
+  align-items: baseline;
+}
+
+.note-body {
+  word-break: break-all;
   margin: 10px;
 }
