--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,10 +35,43 @@
 .notes-header {
   background-color: #FFC133;
   border-bottom: 3px solid #CCD1D1;
+  width: 100%;
+  height: 60px;
+  /* justify-content: flex-start; */
+
 }
 
 .header-title {
-  margin-top: 0px;
+  margin-top: 5px;
+  color: white;
+  float: left;
+}
+
+.title-container {
+  width: 60%;
+}
+
+.header-buttons-container {
+  float: right;
+  margin: 0px 10px 0px 0px;
+  width: 30%;
+}
+
+.header-button {
+  border-radius: 25px;
+  width: 50px;
+  height: 50px;
+  margin: 5px;
+  background-color: white;
+  float: right;
+}
+
+.header-logo {
+  width: 50px;
+  height: 50px;
+  margin: 5px 20px 0px 30px;
+  border-radius: 24px;
+  float: left;
 }
 
 .single-note {
