--- a/client/src/App.css
+++ b/client/src/App.css
@@ -107,8 +107,19 @@
   position: fixed;
   bottom: 50px;
   right: 50px;
-  z-index: 2;
+  z-index: 1;
   cursor: pointer;
   background-color: #FFC133;
   color: white;
+}
+
+.note-modal {
+  background-color: rgb(0,0,0,0.6);
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  z-index: 10;
 }
