--- a/client/src/App.css
+++ b/client/src/App.css
@@ -123,3 +123,22 @@
   display: block;
   z-index: 10;
 }
+
+.note-modal-content {
+  background-color: white;
+  width: 600px;
+  margin-top: 200px;
+  margin-left: calc(50% - 300px);
+  padding: 10px;
+}
+
+.note-input {
+  width: 600px;
+  /* margin-left: calc(50% - 250px); */
+  text-align: left;
+}
+
+div[contenteditable] {
+  border: 1px solid green;
+  max-height: 200px;
+}
