--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,8 +34,8 @@
 
 /* Header */
 .notes-header {
-  background-color: #FFC133;
-  border-bottom: 3px solid #CCD1D1;
+  background-color: #FF8C00;
+  border-bottom: 3px solid #DCDCDC;
   width: 100%;
   height: 60px;
 }
@@ -64,6 +64,7 @@
   margin: 5px;
   background-color: white;
   float: right;
+  border: none;
 }
 
 .header-logo {
@@ -92,7 +93,7 @@
   right: 50px;
   z-index: 1;
   cursor: pointer;
-  background-color: #FFC133;
+  background-color: #FF8C00;
   color: white;
 }
 
@@ -141,12 +142,14 @@
 
 /* Single Note */
 .single-note {
-  border: 2px solid orangered;
+  border: 2px solid #DCDCDC;
   width: 22.4%;
   margin: 10px;
   max-height: 225px;
   min-height: 110px;
   overflow: hidden;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .note-title {
