--- a/client/src/App.css
+++ b/client/src/App.css
@@ -142,16 +142,17 @@
 .note-modal-content {
   background-color: white;
   width: 80%;
-  margin-top: 24px;
+  margin-top: 12px;
   /* margin-left: calc(50% - 300px); */
   margin-left: 8%;
   padding: 10px;
   border-radius: 15px;
+  height: calc(50% - 12px);
 }
 
 .note-input-body {
   /* width: 595px; */
-  height: 200px;
+  height: 70%;
   overflow: auto;
   /* border-radius: 15px; */
 }
@@ -164,7 +165,7 @@
 }
 
 .modal-btn-container {
-  height: 20px;
+  height: 10%;
   width: 100%;
 }
 
