--- a/client/src/App.css
+++ b/client/src/App.css
@@ -103,6 +103,7 @@
   flex-wrap: wrap;
   width: 100%;
   align-items: baseline;
+  padding: 0px;
 }
 
 .new-note {
@@ -141,23 +142,24 @@
 
 .note-modal-content {
   background-color: white;
-  width: 80%;
-  margin-top: 12px;
+  width: calc(100% - 20px);
+  /* margin-top: 12px; */
   /* margin-left: calc(50% - 300px); */
-  margin-left: 8%;
+  /* margin-left: 8%; */
   padding: 10px;
   border-radius: 15px;
-  height: calc(95% - 12px);
+  height: calc(100% - 20px);
 }
 
 .note-input-body {
   /* width: 595px; */
-  height: 85%;
+  height: calc(100% - 85px);
   overflow: auto;
   /* border-radius: 15px; */
 }
 
 .note-input-title, .note-input-body {
+  padding: 0px;
   text-align: left;
   width: calc(100% - 20px);
   border-radius: 15px;
@@ -165,7 +167,7 @@
 }
 
 .modal-btn-container {
-  height: 5%;
+  height: 30px;
   width: 100%;
 }
 
@@ -194,6 +196,7 @@
   .note-modal-content {
     width: 600px;
     margin-left: calc(50% - 300px);
+    height: 385px;
   }
 
   .note-input-body {
