--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
 .App {
   text-align: center;
 }
@@ -34,8 +38,8 @@
 
 /* ================== Header ============================ */
 .notes-header {
-  background-color: #FF8C00;
-  border-bottom: 3px solid #DCDCDC;
+  background-color: #ffd000;
+  border-bottom: 3px solid #00bfff;
   width: 100%;
   height: 60px;
 }
@@ -43,7 +47,7 @@
 .header-title {
   margin-top: 13px;
   font-size: 20px;
-  color: white;
+  color: #5c5c5c;
   float: left;
   cursor: pointer;
 }
@@ -78,10 +82,10 @@
 .header-logo {
   width: 50px;
   height: 50px;
-  margin-top: 5px;
   border-radius: 24px;
   float: left;
   cursor: pointer;
+  margin: 5px 10px 0px 15px;
 }
 
 @media screen and (min-width: 900px) {
@@ -104,6 +108,8 @@
   width: 100%;
   align-items: baseline;
   padding: 0px;
+  max-width: 950px;
+  margin: auto;
 }
 
 .new-note {
@@ -115,8 +121,10 @@
   right: 20px;
   z-index: 1;
   cursor: pointer;
-  background-color: #FF8C00;
-  color: white;
+  background-color: #ffd000;
+  color: #5c5c5c;
+  border: 3px solid #DCDCDC;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 @media screen and (min-width: 900px) {
@@ -143,19 +151,18 @@
 .note-modal-content {
   background-color: white;
   width: calc(100% - 20px);
-  /* margin-top: 12px; */
-  /* margin-left: calc(50% - 300px); */
-  /* margin-left: 8%; */
   padding: 10px;
   border-radius: 15px;
   height: calc(100% - 20px);
 }
 
 .note-input-body {
-  /* width: 595px; */
   height: calc(100% - 85px);
   overflow: auto;
-  /* border-radius: 15px; */
+}
+
+.note-input-title {
+  font-weight: bold;
 }
 
 .note-input-title, .note-input-body {
@@ -165,6 +172,20 @@
   border-radius: 15px;
   padding: 5px;
 }
+
+@media screen and (min-width: 900px) {
+  .note-modal-content {
+    width: 600px;
+    margin-left: calc(50% - 300px);
+    height: 385px;
+  }
+
+  .note-input-body {
+    height: 300px;
+  }
+}
+
+/* ========================== Modal Buttons ========================= */
 
 .modal-btn-container {
   height: 30px;
@@ -190,20 +211,6 @@
   background-color: white;
   font-size: 16px;
   cursor: pointer;
-}
-
-@media screen and (min-width: 900px) {
-  .note-modal-content {
-    width: 600px;
-    margin-left: calc(50% - 300px);
-    height: 385px;
-  }
-
-  .note-input-body {
-    /* width: 595px; */
-    height: 300px;
-    /* border-radius: 15px; */
-  }
 }
 
 /* ======================== Single Note ========================= */
