--- a/client/src/App.css
+++ b/client/src/App.css
@@ -249,3 +249,21 @@ body {
     width: calc(25% - 26px);
   }
 }
+
+/* ======================== Loader ========================== */
+
+.loader {
+  /* background-color: green; */
+  width: 50px;
+  height: 50px;
+  border: 5px solid #00bfff;
+  border-bottom: 5px solid #ffd000;
+  border-radius: 35px;
+  animation: spin 2s linear infinite;
+  margin: calc(25% - 25px) 0px 0px calc(50% - 25px);
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
