--- a/client/src/App.css
+++ b/client/src/App.css
@@ -267,3 +267,28 @@ body {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+/* ============================== Dropdown ============================= */
+
+.dropdown-container {
+  position: relative;
+  float: right;
+  /* width: 200px; */
+  margin: 0px;
+}
+
+.color-swatches {
+  position: absolute;
+  right: 0px;
+  bottom: 32px;
+  display: flex;
+  flex-wrap: wrap;
+  width: 120px;
+}
+
+.color-btn {
+  border-radius: 14px;
+  border: 3px solid black;
+  width: 48px;
+  height: 48px;
+}
