--- a/client/src/App.css
+++ b/client/src/App.css
@@ -157,7 +157,7 @@ body {
 }
 
 .note-input-body {
-  height: calc(100% - 85px);
+  height: calc(100% - 100px);
   overflow: auto;
 }
 
@@ -171,6 +171,7 @@ body {
   width: calc(100% - 20px);
   border-radius: 15px;
   padding: 5px;
+  font-size: 20px;
 }
 
 @media screen and (min-width: 900px) {
@@ -181,7 +182,7 @@ body {
   }
 
   .note-input-body {
-    height: 300px;
+    height: 285px;
   }
 }
 
