--- a/client/src/App.css
+++ b/client/src/App.css
@@ -254,8 +254,7 @@ body {
   border: 2px solid #DCDCDC;
   width: calc(50% - 26px);
   margin: 10px;
-  max-height: 225px;
-  min-height: 110px;
+  height: 150px;
   overflow: hidden;
   border-radius: 12px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
