--- a/client/src/App.css
+++ b/client/src/App.css
@@ -303,3 +303,34 @@ body {
   100% { transform: rotate(360deg); }
 }
 
+/* ============================= Login ============================= */
+
+.login {
+  margin-top: 50px;
+  margin-left: calc(50% - 200px);
+  width: 400px;
+  height: 275px;
+  /* background-color: #00bfff; */
+  border: 3px solid #DCDCDC;
+  font-size: 24px;
+  border-radius: 10px;
+}
+
+.login-title {
+  color: #54535e;
+}
+
+.login-input {
+  font-size: 24px;
+  margin: 10px;
+}
+
+.login-btn {
+  width: 200px;
+  font-size: 24px;
+  background-color: #ffd000;
+  color: #282c34;
+  border: none;
+  border-radius: 5px;
+  margin: 15px;
+}
