Adjust login input borders

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -323,6 +323,8 @@ body {
 .login-input {
   font-size: 24px;
   margin: 10px;
+  border-radius: 8px;
+  border: 2px solid #DCDCDC;
 }
 
 .login-btn {
