--- a/client/src/App.css
+++ b/client/src/App.css
@@ -308,7 +308,7 @@ body {
   margin-top: 50px;
   margin-left: calc(4%);
   width: 90%;
-  height: 275px;
+  height: 325px;
   /* background-color: #00bfff; */
   border: 3px solid #DCDCDC;
   font-size: 24px;
@@ -334,6 +334,13 @@ body {
   border: none;
   border-radius: 5px;
   margin: 15px;
+  cursor: pointer;
+}
+
+.login-signup {
+  font-size: 16px;
+  color: #ffd000;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 500px) {
