--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,9 +80,9 @@ body {
 }
 
 .header-logo {
-  width: 50px;
-  height: 50px;
-  border-radius: 24px;
+  width: 48px;
+  height: 48px;
+  /* border-radius: 24px; */
   float: left;
   cursor: pointer;
   margin: 5px 10px 0px 15px;
@@ -95,7 +95,7 @@ body {
   }
   
   .header-logo {
-    margin: 5px 20px 0px 30px;
+    margin: 5px 10px 0px 30px;
   }
 }
 
@@ -178,11 +178,12 @@ body {
   .note-modal-content {
     width: 600px;
     margin-left: calc(50% - 300px);
-    height: 385px;
+    margin-top: 24px;
+    height: 87%;
   }
 
   .note-input-body {
-    height: 285px;
+    height: calc(100% - 100px );
   }
 }
 
