--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,7 +38,8 @@ body {
 
 /* ================== Header ============================ */
 .notes-header {
-  background-color: #ffd000;
+  background: rgb(255,208,0);
+  background: linear-gradient(304deg, rgba(255,208,0,1) 0%, rgba(255,241,177,1) 100%);
   border-bottom: 3px solid #00bfff;
   width: 100%;
   height: 60px;
@@ -101,6 +102,26 @@ body {
 
 /* ===================== Notes Page ====================== */
 
+.signin-notice {
+  color: #F5535E;
+  width: calc(100% - 36px);
+  margin: 10px ;
+  padding: 5px;
+  /* margin-top: 10px; */
+  border: 3px solid red;
+  border-radius: 5px;
+}
+
+.empty-notes {
+  width: 250px;
+  color: #778899;
+  border: 5px solid #778899;
+  padding: 10px;
+  border-radius: 10px;
+  margin: auto;
+  margin-top: 32px;
+}
+
 .notes-grid {
   display: flex;
   flex-wrap: wrap;
@@ -126,7 +147,7 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 950px) {
   .new-note {
     bottom: 40px;
     right: 50px;
