--- a/client/src/App.css
+++ b/client/src/App.css
@@ -371,3 +371,21 @@ body {
     width: 350px;
   }
 }
+
+/* ================= Snackbar =================== */
+
+#snackbar {
+  visibility: hidden;
+  min-width: 200px;
+  margin-left: -125px;
+  text-align: center;
+  position: fixed;
+  z-index: 1;
+  left: 50%;
+  bottom: 30px;
+  background-color: #00bfff;
+}
+
+#snackbar.show {
+  visibility: visible;
+}
